# chess-engine

./: Cargo.toml  chess.session.sql  t.py  test.json  test2.json
chess-turn-engine/src/: game.rs  lib.rs
chess-turn-engine/src/game/: board.rs  board_map.rs
src/: database.rs  main.rs  maths.rs  neural_netowrk.rs  nn2.rs
static/: process2.rs  sql.rs
