[package]
name = "chess_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "process"
path = "static/process.rs"

[[bin]]
name = "process2"
path = "static/process2.rs"

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
chess-notation-parser = "0.2.3"
chess-turn-engine = { path = "chess-turn-engine" }
ndarray = { version = "0.15.6", features = ["serde"] }
rand = "0.8.5"
ron = "0.8.0"
rusqlite = "0.28.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
